package com.example.androidexample.util

// ErrorView
const val ERROR_VIEW_RETRY_BUTTON = "retryButton"

// LoadingView
const val LOADING_VIEW_LOADING_INDICATOR = "loadingIndicator"

// MainScreen
const val MAIN_SCREEN_ITEMS_LIST = "itemsList"
const val MAIN_SCREEN_LIST_ITEM = "listItem"
const val MAIN_SCREEN_SWIPE_REFRESH = "swipeRefresh"

// ItemDetailsView
const val ITEM_DETAILS_VIEW_ITEM = "itemDetails"
const val ITEM_DETAILS_VIEW_BACK_BUTTON = "backButton"
