...
import androidx.compose.ui.tooling.preview.PreviewParameterProvider
import com.example.androidexample.presentation.models.ScreenState
import com.example.androidexample.ui.theme.AndroidExampleTheme
import com.google.accompanist.swiperefresh.SwipeRefresh
import com.google.accompanist.swiperefresh.rememberSwipeRefreshState

const val CONTENT_SCREEN_ITEMS_LIST = "itemsList"
const val CONTENT_SCREEN_LIST_ITEM = "listItem"

@Composable
fun Content(items: List<ScreenState.Loaded.JokeUiModel>, onSwipeRefresh: () -> Unit) {
    SwipeRefresh(
        state = rememberSwipeRefreshState(isRefreshing = false),
...
